# leelaApplication

./: build.gradle  gradle-wrapper.properties  local.properties  readme.md
app/: build.gradle
app/src/androidTest/java/com/example/leelaapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  leelazero.cpp  leelazero.h  native-lib.cpp
app/src/main/cpp/QML/include/: netlib_lapack.h  qlapack.h  qml.h  qml_architecture.h  qml_blas.h  qml_blas1.h  qml_blas2.h  qml_blas3.h  qml_cblas.h  qml_cblas1.h  qml_cblas2.h  qml_cblas3.h  qml_cblas_common.h  qml_extensions.h  qml_info.h  qml_runtime.h  qml_types.h  qml_types_base.h  qsml.h
app/src/main/cpp/boost1.69/include/boost/: version_ndk.hpp
app/src/main/cpp/cl_stub-master/: CMakeLists.txt  cl_stub.c
app/src/main/cpp/cl_stub-master/include/: cl_stub.h
app/src/main/cpp/leela0.16/: CPUPipe.cpp  GTP.cpp  Leela.cpp  Network.cpp  OpenCL.cpp  Tuner.cpp  UCTSearch.h  config-.h  config.h
app/src/main/cpp/leela0.16/tests/: 0k.txt
app/src/main/java/com/example/leelaapplication/: Leela.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/leelaapplication/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
